--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 
 /* apply styles to header */
 header {
-    padding: 20px; 35px;
+    padding: 20px 35px;
     background-color: #39a6b2;
 }
 
@@ -80,7 +80,7 @@ section {
 /*hero style end*/
 
 .hero-form {
-    border: solid 3px #024376;
+    border: solid 3px #024e76;
     background-color: #fce138;
     padding: 20px;
     width: 500px;
@@ -114,7 +114,7 @@ section {
 }
 
 button {
-    background-color: #024376;
+    background-color: #024e76;
     color: #fce138;
 }
 
@@ -132,6 +132,7 @@ button {
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
+    display: inline-block;
     border-bottom: 3px solid;
 }   
 
@@ -219,4 +220,43 @@ button {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+
+.contact {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
 }
