--- a/assets/style.css
+++ b/assets/style.css
@@ -36,11 +36,18 @@ header nav {
     margin: 7px 0;
 }
 
-header nav ul li {
-    display: inline;
-    margin: 0 30px;
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
+    margin: 0 px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55 vw;
 }
 
 header h1 {
