--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,22 +137,18 @@ button {
     color: #fce138;
 }
 
-.intro {
-    text-align: center;
-}
-
-.steps{
-    text-align: center;
-    background-color: #fce138;
+.steps {
+   background-color: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }   
 
 .primary-border {
@@ -169,6 +165,7 @@ button {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps div {
@@ -193,10 +190,6 @@ button {
 
 .steps span {
     font-size: 38px;
-}
-
-.trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -225,6 +218,10 @@ button {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -242,7 +239,6 @@ button {
 }
 
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
