--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
@@ -30,15 +33,21 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
-header nav ul li {
-    display: inline;
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
     margin: 0 30px;
-    font-weight: lighter;
-    font-size: 22px;
+    font-weight: lighter'
+    font-size: 1.55vw;
 }
 
 header h1 {
@@ -53,12 +62,10 @@ footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 footer div {
+    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -74,39 +81,22 @@ section {
 /*style the hero section*/
 .hero {
     background-image: url("../images/hero-bg.jpg");
+    height: 600px;
     background-size: cover;
     background-position: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    position: relative;
 }
 /*hero style end*/
 
-.hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5%;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1.3;
-}
-
-.hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-}
-
 .hero-form {
-    border: solid 3px #024e76;
+    border: solid 3px #024376;
     background-color: #fce138;
     padding: 20px;
+    width: 500px;
     color: #024376;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 40%;
-    margin: 3.5%;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
 }
 
 .hero-form h3 {
@@ -133,22 +123,25 @@ section {
 }
 
 button {
-    background-color: #024e76;
+    background-color: #024376;
     color: #fce138;
 }
 
-.steps {
-   background-color: #fce138;
+.intro {
+    text-align: center;
+}
+
+.steps{
+    text-align: center;
+    background-color: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
 }   
 
 .primary-border {
@@ -165,79 +158,52 @@ button {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-    text-align: center;
 }
 
-.step {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    border-bottom: 1px solid #39a6b2;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+.steps div {
+    margin-bottom: 80px;
 }
 
-.step h3 {
+.steps img {
+    width: 15%;
+    margin: 10px 0;
+}
+
+.steps h3 {
     color: #024e76;
     font-size: 46px;
-    flex: 1 30%;
+    margin-top: 10px;
 }
 
-.step-img {
-    flex: 1 12%;
-    margin-right: 20px;
-}
-
-.step-img {
-    max-width: 100%;
-}
-
-.step-info {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.step-text {
-    flex: 12%
-}
-
-.step-text p {
+.steps p {
     color: #39a6b2;
-    font-size: 18px;
+    font-size: 23px;
 }
 
-.step-text h4{
-    font-size: 26px;
-    lien-height: 1.5;
-    color: #024e76;
+.steps span {
+    font-size: 38px;
 }
 
 .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    text-align: center;
 }
 
 .trainer {
-    margin: 20px;
-    flex: 1;
+    width: 900px;margin: 0 auto 30px auto;
     background-color: #024e76;
     color: #fce138;
+    overflow: auto;
 }
 
 .trainer img {
-    width: 100%;
-}    
+    width: 35%;
+    float: left;
+}
 
 .trainer-bio {
-    padding: 25px;
-    line-height: 1.3;
+    padding: 35px;
+    float: left;
+    width: 65%;
 }
 
 .text-left {
@@ -248,85 +214,18 @@ button {
     text-align: right;
 }
 
-.flex-row {
-    display: flex;
-}
-
 .trainer-bio h3 {
-    font-size: 28px;
+    font-size: 32px;
+    margin-bottom: 8px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
+    font-size: 26px;
+    margin-bottom: 25px;
 }
 
 .trainer-bio p {
     font-size: 17px;
+    line-height: 1.3;
 }
-
-.contact {
-    background: #024e76;
-}
-
-.contact h2 {
-    color: #fce138;
-}
-
-.contact-info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.contact-info > * {
-    flex: 1;
-    margin: 15px;
-}
-
-.contact-info div {
-    color: white;
-}
-
-.contact-info h3 {
-    color: #fce138;
-    font-size: 32px;
-}
-
-.contact-info p, address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
-}
-
-.contact-info a {
-    color: #fce138;
-}
-
-.contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 5px;
-}
-
-.contact-form button {
-    width: 100%;
-    border: none;
-    background: #fce138;
-    color: #024e76;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
-
-}
-
-.contact-info iframe {
-    height: 400px;
- }
