--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header nav ul {
 
 header nav ul li a {
     margin: 0 30px;
-    font-weight: lighter'
+    font-weight: lighter;
     font-size: 1.55vw;
 }
 
@@ -67,10 +67,6 @@ footer {
     flex-wrap: wrap;
 }
 
-footer h2 {
-
-}
-
 footer div {
     line-height: 1.5;
     text-align: right;
@@ -88,10 +84,10 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    position: relative;
+    background-position: center;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
 }
 /*hero style end*/
 
@@ -111,10 +107,13 @@ section {
 }
 
 .hero-form {
-    border: solid 3px #024376;
+    border: solid 3px #024e76;
     background-color: #fce138;
     padding: 20px;
     color: #024376;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 40%;
     margin: 3.5%;
 }
@@ -143,25 +142,22 @@ section {
 }
 
 button {
-    background-color: #024376;
+    background-color: #024e76;
     color: #fce138;
 }
 
-.intro {
-    text-align: center;
-}
-
-.steps{
-    text-align: center;
-    background-color: #fce138;
+.steps {
+   background-color: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }   
 
 .primary-border {
@@ -178,52 +174,79 @@ button {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-}
-
-.steps div {
-    margin-bottom: 80px;
-}
-
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-
-.steps h3 {
-    color: #024e76;
-    font-size: 46px;
-    margin-top: 10px;
-}
-
-.steps p {
-    color: #39a6b2;
-    font-size: 23px;
-}
-
-.steps span {
-    font-size: 38px;
-}
-
-.trainers {
     text-align: center;
 }
 
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.step h3 {
+    color: #024e76;
+    font-size: 46px;
+    flex: 1 30%;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img {
+    max-width: 100%;
+}
+
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-text {
+    flex: 12%
+}
+
+.step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+}
+
+.step-text h4{
+    font-size: 26px;
+    lien-height: 1.5;
+    color: #024e76;
+}
+
+.trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .trainer {
-    width: 900px;margin: 0 auto 30px auto;
+    margin: 20px;
+    flex: 1;
     background-color: #024e76;
     color: #fce138;
-    overflow: auto;
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
-}
+    width: 100%;
+}    
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    line-height: 1.3;
 }
 
 .text-left {
@@ -234,18 +257,87 @@ button {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
+
+.contact {
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+
+.contact-info div {
+    color: white;
+}
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 16px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+
+}
+
+.contact-info iframe {
+    height: 400px;
+ }
+© 2022 GitHub, Inc.
+Term
