added shadow, rounded corners and sticky header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
 }
 
 header h1 {
@@ -25,6 +32,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header a {
@@ -42,6 +50,7 @@ header nav ul {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 header nav ul li a {
@@ -84,11 +93,12 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
 }
 /*hero style end*/
 
@@ -105,11 +115,12 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .hero-form {
     border: solid 3px #024e76;
-    background-color: #fce138;
+    background-color: rgba(252,225,56,0.8);
     padding: 20px;
     color: #024376;
     display: flex;
@@ -117,6 +128,8 @@ section {
     flex-wrap: wrap;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -136,6 +149,7 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 15px;
 }
 
 .hero-form label {
@@ -145,6 +159,7 @@ section {
 button {
     background-color: #024e76;
     color: #fce138;
+    border-radius: 15px;
 }
 
 .steps {
@@ -324,6 +339,7 @@ button {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 15px;
 }
 
 .contact-form button {
@@ -334,6 +350,7 @@ button {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 15px;
 
 }
 
@@ -345,6 +362,7 @@ button {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
